Add Repo and Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.security.user.name=krystian
 spring.security.user.password=lis
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/KrystianTask?createDatabaseIfNotExist=true&useSSL=true
+spring.datasource.username=root
+spring.datasource.password=?
