--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.security.user.password=lis
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/KrystianTask?createDatabaseIfNotExist=true&useSSL=true
 spring.datasource.username=root
-spring.datasource.password=?
+spring.datasource.password=null
