--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.security.user.password=lis
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/KrystianTask?createDatabaseIfNotExist=true&useSSL=true
 spring.datasource.username=root
-spring.datasource.password=null
+spring.datasource.password=
+spring.profiles.active=default
+logging.level.org.mateuszziebura.krystiantask=debug
